        the _definition.id data item;
      - a typo in one of the output messages.
    - cif_estimate_Z:
      - a typo in the script description.
    - cif_Fcalc:
      - added an explicit result output order.
    - cif_molecule:
      - a typo in a note message.
    - cif_sort_atoms:
      - optimised the reporting of unrecognised atom types.
    - COD::AtomProperties assembler:
      - if any of the atoms lack atomic number, compared lists are joined
        by atom chemical names in compare_properties.
    - COD::AuthorNames:
      - corrected a grammatical mistake a warning message generated
        by the parse_author_name() subroutine.
    - COD::CIF::Data::CIF2COD:
      - values 'inf', 'infinity' and 'nan' (and their capitalized
        variants) are no longer treated as numeric.
    - COD::CIF::Data::CODFlags:
      - has_partially_occupied_ordered_atoms() now unpacks CIF numbers
        before doing numerical comparisons with them;
      - has_partially_occupied_ordered_atoms() treats only occupancies
        less than 1 as partial.
    - COD::CIF::Data::SymmetryGenerator:
      - coinciding symmetry equivalents of an atom which do not coincide
        with the generating atom itself are merged in symops_apply_modulo1()
        if duplicate removal is requested.
    - COD::CIF::DDL::DDLm::Import:
      - corrected the logic that assigns loop indices during 'Content' type
        imports;
      - corrected the filenames in import error messages that are raised
        during complex import scenarios.
    - COD::CIF::Unicode2CIF:
      - removed the unofficial CIF special codes for letters 'ů' and 'Ů'
        ('\"u', '\"U');
      - updated the unicode2cif() subroutine to properly encode the '≠'
        sign as '\\neq' instead of '=&#x0338;';
      - updated most of CIF special codes with the '\\' prefix to not require
        a trailing space symbol (' '). The '\\db ', '\\tb ' and '\\ddb ' codes