@@ -1,7 +1,7 @@
 #---*- Makefile -*-------------------------------------------------------------
 #$Author: saulius $
-#$Revision: 26 $
-#$Date: 2015-04-05 09:52:45 +0300 (Sun, 05 Apr 2015) $
+#$Revision: 144 $
+#$Date: 2021-05-18 08:31:25 +0300 (An, 18 geg. 2021) $
 #$URL: svn+ssh://saulius-grazulis.lt/home/saulius/svn-repositories/libraries/trunk/c/cexceptions/Makeconfig.example $
 #------------------------------------------------------------------------------
 #
@@ -33,3 +33,5 @@ EXTRA_LIB_DIRS = ../cexceptions/lib
 
 EXTRA_INC_CFLAGS  = ${addprefix -I, ${EXTRA_INC_DIRS}}
 EXTRA_LIB_LDFLAGS = ${addprefix -L, ${EXTRA_LIB_DIRS}}
+
+EXTRA_CFLAGS = -DHAS_VSNPRINTF
