@@ -127,6 +127,8 @@ cod-tools (unreleased)
       - a typo in a note message.
     - cif_sort_atoms:
       - optimised the reporting of unrecognised atom types.
+    - codcif:
+      - fixed a buffer overrun in 'cexceptions' by applying upstream patch.
     - COD::AtomProperties assembler:
       - if any of the atoms lack atomic number, compared lists are joined
         by atom chemical names in compare_properties.
